--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
         <li class="link"></li>
         <li class="link link--blue"></li>
     </nav>
-    <div class="hero">hero</div>
+    <div class="hero">
+        <div class="hero-content">
+            <li></li>
+            <li></li>
+            <li></li>
+        </div>
+
+    </div>
     <div class="benefits">benefits</div>
     <div class="getstarted">Get started</div>
     <div class="programs">programs</div>
