--- a/index.html
+++ b/index.html
@@ -17,18 +17,60 @@
         <li class="link"></li>
         <li class="link link--blue"></li>
     </nav>
+
     <div class="hero">
         <div class="hero-content">
             <li></li>
             <li></li>
             <li></li>
         </div>
-
     </div>
-    <div class="benefits">benefits</div>
+
+    <div class="benefits">
+        <div class="benefits-box">
+            <div class="img"></div>
+            <li class="dark-line"></li>
+            <li class="grey-line--long"></li>
+            <li class="grey-line--short"></li>
+        </div>
+        <div class="benefits-box">
+            <div class="img"></div>
+            <li class="dark-line"></li>
+            <li class="grey-line--long"></li>
+            <li class="grey-line--short"></li>
+        </div>
+        <div class="benefits-box">
+            <div class="img"></div>
+            <li class="dark-line"></li>
+            <li class="grey-line--long"></li>
+            <li class="grey-line--short"></li>
+        </div>
+        <div class="benefits-box">
+            <div class="img"></div>
+            <li class="dark-line"></li>
+            <li class="grey-line--long"></li>
+            <li class="grey-line--short"></li>
+        </div>
+        <div class="benefits-box">
+            <div class="img"></div>
+            <li class="dark-line"></li>
+            <li class="grey-line--long"></li>
+            <li class="grey-line--short"></li>
+        </div>
+        <div class="benefits-box">
+            <div class="img"></div>
+            <li class="dark-line"></li>
+            <li class="grey-line--long"></li>
+            <li class="grey-line--short"></li>
+        </div>
+    </div>
+
     <div class="getstarted">Get started</div>
+
     <div class="programs">programs</div>
+
     <div class="signup">sign up</div>
+
     <footer class="footer">footer</footer>
 </body>
 
