--- a/index.html
+++ b/index.html
@@ -65,7 +65,22 @@
         </div>
     </div>
 
-    <div class="getstarted">Get started</div>
+    <div class="getstarted">
+        <div class="getstarted-content">
+            <div class="dark-line"></div>
+            <div class="grey-line--long"></div>
+            <div class="grey-line--short"></div>
+            &nbsp;
+            <div class="dark-line"></div>
+            <div class="grey-line--long"></div>
+            <div class="grey-line--long"></div>
+            <div class="grey-line--short"></div>
+            &nbsp;
+            <li class="link link--blue"></li>
+
+        </div>
+        <div class="getstarted-video">video</div>
+    </div>
 
     <div class="programs">programs</div>
 
