--- a/index.html
+++ b/index.html
@@ -82,7 +82,47 @@
         <div class="getstarted-video">video</div>
     </div>
 
-    <div class="programs">programs</div>
+    <div class="programs">
+        <div class="grey-line--short first-line"></div>
+        <div class="programs-boxes">
+            <div class="programs-box">
+                <div class="img"></div>
+                <div class="dark-line"></div>
+                <div class="grey-line--long"></div>
+                <div class="grey-line--short"></div>
+            </div>
+            <div class="programs-box">
+                <div class="img"></div>
+                <div class="dark-line"></div>
+                <div class="grey-line--long"></div>
+                <div class="grey-line--short"></div>
+            </div>
+            <div class="programs-box">
+                <div class="img"></div>
+                <div class="dark-line"></div>
+                <div class="grey-line--long"></div>
+                <div class="grey-line--short"></div>
+            </div>
+            <div class="programs-box">
+                <div class="img"></div>
+                <div class="dark-line"></div>
+                <div class="grey-line--long"></div>
+                <div class="grey-line--short"></div>
+            </div>
+            <div class="programs-box">
+                <div class="img"></div>
+                <div class="dark-line"></div>
+                <div class="grey-line--long"></div>
+                <div class="grey-line--short"></div>
+            </div>
+            <div class="programs-box">
+                <div class="img"></div>
+                <div class="dark-line"></div>
+                <div class="grey-line--long"></div>
+                <div class="grey-line--short"></div>
+            </div>
+        </div>
+    </div>
 
     <div class="signup">sign up</div>
 
