sign up section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
         </div>
     </div>
 
-    <div class="signup">sign up</div>
+    <div class="signup">
+        <li class="link"></li>
+        <li class="link link--blue"></li>
+    </div>
 
     <footer class="footer">footer</footer>
 </body>
