--- a/index.html
+++ b/index.html
@@ -129,7 +129,28 @@
         <li class="link link--blue"></li>
     </div>
 
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+        <div class="footer-box">
+            <div class="dark-line"></div>
+            <div class="grey-line--long"></div>
+            <div class="grey-line--short"></div>
+        </div>
+        <div class="footer-box">
+            <div class="dark-line"></div>
+            <div class="grey-line--long"></div>
+            <div class="grey-line--short"></div>
+        </div>
+        <div class="footer-box">
+            <div class="dark-line"></div>
+            <div class="grey-line--long"></div>
+            <div class="grey-line--short"></div>
+        </div>
+        <div class="footer-box">
+            <div class="dark-line"></div>
+            <div class="grey-line--long"></div>
+            <div class="grey-line--short"></div>
+        </div>
+    </footer>
 </body>
 
 </html>
