--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Layout 7</title>
 </head>
 
 <body>
     <nav class="nav">
         <li class="link link--blue"></li>
-        <li class="link"></li>
-        <li class="link"></li>
-        <li class="link"></li>
-        <li class="link"></li>
+        <li class="link nav-link"></li>
+        <li class="link nav-link"></li>
+        <li class="link nav-link"></li>
+        <li class="link nav-link"></li>
         <li class="link link--blue"></li>
     </nav>
 
